# zerobrew

./: Cargo.toml  Justfile  README.md  benchmark-results.txt
site/: eleventy.config.js
site/src/: _redirects  index.md
site/src/_data/: docs.js  home.json  projectDocs.js  site.json
site/src/_includes/components/content/: cards.njk
site/src/_includes/components/docs/: callouts.njk  shell.njk
site/src/_includes/components/home/: card-grid.njk  hero.njk  install-benchmark.njk
site/src/_includes/components/site/: footer.njk  header.njk
site/src/_includes/layouts/: base.njk  docs.njk
site/src/assets/: site.webmanifest
site/src/docs/: index.md
site/src/docs/commands/: completion.md  gc.md  index.md  info.md  init.md  install.md  list.md  migrate.md  overview.md  reset.md  uninstall.md
site/src/docs/community/: code-of-conduct.md  contributing.md  index.md  security.md
site/src/docs/core-concepts/: architecture.md  configuration.md  index.md
site/src/docs/get-started/: index.md  installation.md  introduction.md  quickstart.md
site/src/docs/guides/: benchmarking.md  index.md  migrating-from-homebrew.md  troubleshooting.md
site/src/js/: home.js
zb_cli/src/: init.rs  utils.rs
zb_cli/src/commands/: bundle.rs  install.rs  run.rs  uninstall.rs
zb_core/fixtures/: formula_foo.json
zb_core/src/: bottle.rs  errors.rs  formula.rs  lib.rs  resolve.rs
zb_core/src/formula/: bottle.rs  mod.rs  resolve.rs  types.rs
zb_io/: Cargo.toml
zb_io/src/: api.rs  cache.rs  lib.rs  link.rs
zb_io/src/cellar/: link.rs
zb_io/src/extraction/: extract.rs  mod.rs
zb_io/src/installer/: cask.rs  install.rs  mod.rs
zb_io/src/installer/install/: bottle.rs  mod.rs  outdated.rs  plan.rs  source.rs  uninstall.rs
zb_io/src/network/: api.rs  cache.rs  mod.rs  tap_formula.rs
zb_io/src/network/download/: mod.rs
zb_io/src/storage/: db.rs  store.rs
