[package]
name = "zb_io"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zb_core = { path = "../zb_core" }

[dev-dependencies]
wiremock = "0.6"
