[package]
name = "zb_io"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
flate2.workspace = true
futures.workspace = true
libc.workspace = true
futures-util.workspace = true
rayon.workspace = true
regex.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
fs4.workspace = true
walkdir.workspace = true
xz2.workspace = true
zstd.workspace = true
zb_core = { path = "../zb_core" }
arwen = "0.0.5"
object = "0.38.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { workspace = true, features = ["rustls"] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { workspace = true, features = ["native-tls"] }

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
